August_30/August_30/src/objects/CustomerStory__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>CustomerStories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Focus__c</fullName>
        <label>Business Focus</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Challenge__c</fullName>
        <label>Challenge</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commerce_Cloud__c</fullName>
        <label>Commerce Cloud</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apple Pay deployment</fullName>
                </value>
                <value>
                    <fullName>B2B Digital Commerce implementation</fullName>
                </value>
                <value>
                    <fullName>Commerce Cloud Accelerator package launch</fullName>
                </value>
                <value>
                    <fullName>Commerce Cloud Order Management Solution</fullName>
                </value>
                <value>
                    <fullName>Commerce Cloud Store Solution</fullName>
                </value>
                <value>
                    <fullName>Digital Store Solution</fullName>
                </value>
                <value>
                    <fullName>E2E services - logistics, warehousing, customer service</fullName>
                </value>
                <value>
                    <fullName>eCommerce Site/full re-platform</fullName>
                </value>
                <value>
                    <fullName>Einstein (Predictive Intelligence)</fullName>
                </value>
                <value>
                    <fullName>High level discovery &amp; documentation - independent project</fullName>
                </value>
                <value>
                    <fullName>MaaS (Merchandising as a Service) - managing a customer site</fullName>
                </value>
                <value>
                    <fullName>Major site re-design/re-brand/additional sites rolled out</fullName>
                </value>
                <value>
                    <fullName>Multi-brand project</fullName>
                </value>
                <value>
                    <fullName>Multi-country project</fullName>
                </value>
                <value>
                    <fullName>Optimisation Project - SEO, MVT/AB, UX/UI</fullName>
                </value>
                <value>
                    <fullName>Solution Support</fullName>
                </value>
                <value>
                    <fullName>Solution Support Customer - takeover</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_Cloud__c</fullName>
        <label>Community Cloud</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chatter (process collaboration)</fullName>
                </value>
                <value>
                    <fullName>Customer Community - Agency and Company Collaboration</fullName>
                </value>
                <value>
                    <fullName>Customer Community - Marketing and E-Commerce</fullName>
                </value>
                <value>
                    <fullName>Customer Community - Self Service (B to B)</fullName>
                </value>
                <value>
                    <fullName>Customer Community - Self Service (B to C)</fullName>
                </value>
                <value>
                    <fullName>Customer Community - User Group/ Advisory Council</fullName>
                </value>
                <value>
                    <fullName>Employee Community - Internal Helpdesk</fullName>
                </value>
                <value>
                    <fullName>Employee Community - Social Intranet</fullName>
                </value>
                <value>
                    <fullName>Lightning Bolt Deployment</fullName>
                </value>
                <value>
                    <fullName>Lightning Community Deployment</fullName>
                </value>
                <value>
                    <fullName>Partner Community - Agents and Brokers (distributors/dealers)</fullName>
                </value>
                <value>
                    <fullName>Partner Community - Channel Sales</fullName>
                </value>
                <value>
                    <fullName>Salesforce CPQ for Communities (SteelBrick)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Overview__c</fullName>
        <label>Company Overview</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>CustomerStories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Executive_Sponsor_Email__c</fullName>
        <label>Customer Executive Sponsor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_Executive_Sponsor_First_Name__c</fullName>
        <label>Customer Executive Sponsor First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Executive_Sponsor_Last_Name__c</fullName>
        <label>Customer Executive Sponsor Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_System_Admin_Email__c</fullName>
        <label>Customer System Admin Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_System_Admin_First_Name__c</fullName>
        <label>Customer System Admin First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_System_Admin_Last_Name__c</fullName>
        <label>Customer System Admin Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desk_com__c</fullName>
        <label>Desk.com</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admin Configuration and Best Practices</fullName>
                </value>
                <value>
                    <fullName>API</fullName>
                </value>
                <value>
                    <fullName>Support Center Branding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aerospace and Defense</fullName>
                </value>
                <value>
                    <fullName>Agriculture and Mining</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Consumer Goods</fullName>
                </value>
                <value>
                    <fullName>Energy and Utilities</fullName>
                </value>
                <value>
                    <fullName>Engineering, Construction, and Real Estate</fullName>
                </value>
                <value>
                    <fullName>Financial Services: Banking</fullName>
                </value>
                <value>
                    <fullName>Financial Services: Capital Markets</fullName>
                </value>
                <value>
                    <fullName>Financial Services: Insurance</fullName>
                </value>
                <value>
                    <fullName>Healthcare and Life Sciences: Medical Devices</fullName>
                </value>
                <value>
                    <fullName>Healthcare and Life Sciences: Devices</fullName>
                </value>
                <value>
                    <fullName>Healthcare and Life Sciences: Pharma</fullName>
                </value>
                <value>
                    <fullName>Healthcare and Life Sciences: Provider</fullName>
                </value>
                <value>
                    <fullName>High Tech</fullName>
                </value>
                <value>
                    <fullName>Higher Education</fullName>
                </value>
                <value>
                    <fullName>Hospitality, Travel, Transportation</fullName>
                </value>
                <value>
                    <fullName>Manufacturering</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Oil and Gas</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Public Sector: Federal</fullName>
                </value>
                <value>
                    <fullName>Public Sector: State/Local</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lessons_Learned__c</fullName>
        <label>Quotes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Cloud__c</fullName>
        <label>Marketing Cloud</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advertising Studio</fullName>
                </value>
                <value>
                    <fullName>Amp Script</fullName>
                </value>
                <value>
                    <fullName>Audience Builder</fullName>
                </value>
                <value>
                    <fullName>Automation Studio</fullName>
                </value>
                <value>
                    <fullName>Commerce Cloud Integration</fullName>
                </value>
                <value>
                    <fullName>Contact Builder/Journey Builder</fullName>
                </value>
                <value>
                    <fullName>Content Builder/Email</fullName>
                </value>
                <value>
                    <fullName>Customer Data Mgmt (other integration)</fullName>
                </value>
                <value>
                    <fullName>Discover (reporting tool)</fullName>
                </value>
                <value>
                    <fullName>DMP for Marketer</fullName>
                </value>
                <value>
                    <fullName>E-Commerce Integration</fullName>
                </value>
                <value>
                    <fullName>Google Analytics Integration</fullName>
                </value>
                <value>
                    <fullName>Landing Pages / Cloud Pages</fullName>
                </value>
                <value>
                    <fullName>Mobile Push</fullName>
                </value>
                <value>
                    <fullName>Mobile SMS</fullName>
                </value>
                <value>
                    <fullName>Predictive Offerings</fullName>
                </value>
                <value>
                    <fullName>Sales Cloud Integration</fullName>
                </value>
                <value>
                    <fullName>Service Cloud Integration</fullName>
                </value>
                <value>
                    <fullName>Social Studio (Buddy Media, Radian6)</fullName>
                </value>
                <value>
                    <fullName>Web Analytic Integration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Users__c</fullName>
        <label>Number of Users</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-5</fullName>
                </value>
                <value>
                    <fullName>6-20</fullName>
                </value>
                <value>
                    <fullName>21-100</fullName>
                </value>
                <value>
                    <fullName>101-500</fullName>
                </value>
                <value>
                    <fullName>501-3,500</fullName>
                </value>
                <value>
                    <fullName>3,500+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PDO_AppExchange_App_Development__c</fullName>
        <label>PDO: AppExchange App Development</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Integration / Connected Apps / Lightning Connect</fullName>
                </value>
                <value>
                    <fullName>LMA / COA / Environment Hub</fullName>
                </value>
                <value>
                    <fullName>Namespaces / Managed Packages</fullName>
                </value>
                <value>
                    <fullName>Security Review and AppEx listing</fullName>
                </value>
                <value>
                    <fullName>Shield (encryption, event monitoring, field history)</fullName>
                </value>
                <value>
                    <fullName>Trialforce</fullName>
                </value>
                <value>
                    <fullName>Wave Analytics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product 1</fullName>
                </value>
                <value>
                    <fullName>Product 2</fullName>
                </value>
                <value>
                    <fullName>Service 1</fullName>
                </value>
                <value>
                    <fullName>Service 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Go_Live_Date__c</fullName>
        <label>Project Go-Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Projects__c</referenceTo>
        <relationshipLabel>Customer Stories Search</relationshipLabel>
        <relationshipName>Customer_Stories_Search</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>CustomerStories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Results__c</fullName>
        <label>Results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Cloud__c</fullName>
        <label>Sales Cloud</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Back office Integration</fullName>
                </value>
                <value>
                    <fullName>Email and Calendar Integration (Microsoft/Google)</fullName>
                </value>
                <value>
                    <fullName>Forecasting</fullName>
                </value>
                <value>
                    <fullName>Large Scale implementation (over 300 sales reps)</fullName>
                </value>
                <value>
                    <fullName>Leads and Campaigns</fullName>
                </value>
                <value>
                    <fullName>Lightning Deployment (new org)</fullName>
                </value>
                <value>
                    <fullName>Lightning Migration (Classic to Lightning)</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Operational Analytics (reports and dashboards)</fullName>
                </value>
                <value>
                    <fullName>Opportunity/Pipeline Management</fullName>
                </value>
                <value>
                    <fullName>Pardot</fullName>
                </value>
                <value>
                    <fullName>Person Accounts</fullName>
                </value>
                <value>
                    <fullName>Sales Cloud Einstein</fullName>
                </value>
                <value>
                    <fullName>Sales Console</fullName>
                </value>
                <value>
                    <fullName>Salesforce Billing Implementation (Steelbrick)</fullName>
                </value>
                <value>
                    <fullName>Salesforce CPQ Implementation (Steelbrick)</fullName>
                </value>
                <value>
                    <fullName>SalesforceIQ Inbox Deployment</fullName>
                </value>
                <value>
                    <fullName>Territory Management</fullName>
                </value>
                <value>
                    <fullName>Workflow and Approval Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Reference__c</fullName>
        <inlineHelpText>This picklist will determine what image shows up for the "Use Contact As Reference?"</inlineHelpText>
        <label>Sales Reference</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesforce_Einstein_Analytics__c</fullName>
        <label>Salesforce Einstein Analytics</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Einstein Analytics Platform</fullName>
                </value>
                <value>
                    <fullName>Einstein Discovery Deployment</fullName>
                </value>
                <value>
                    <fullName>Einstein Sales Analytics Deployment</fullName>
                </value>
                <value>
                    <fullName>Einstein Service Analytics Deployment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesforce_Industry_Products__c</fullName>
        <label>Salesforce Industry Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Financial Services Cloud</fullName>
                </value>
                <value>
                    <fullName>Government Cloud</fullName>
                </value>
                <value>
                    <fullName>Health Cloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesforce_Platform__c</fullName>
        <label>Salesforce Platform</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Application Development Lifecycle &amp; Deployment</fullName>
                </value>
                <value>
                    <fullName>Custom App Dev (Lightning and Javascript)</fullName>
                </value>
                <value>
                    <fullName>Custom App Dev (Visualforce and APEX)</fullName>
                </value>
                <value>
                    <fullName>Einstein Platform Services</fullName>
                </value>
                <value>
                    <fullName>Heroku Application Development and Data Services</fullName>
                </value>
                <value>
                    <fullName>Identity and SSO</fullName>
                </value>
                <value>
                    <fullName>Integration incl Platform Events</fullName>
                </value>
                <value>
                    <fullName>Internet of Things (IOT)</fullName>
                </value>
                <value>
                    <fullName>Large Data Volumes (over 5 Million Records in the org)</fullName>
                </value>
                <value>
                    <fullName>Mobile Custom App Dev (Salesforce SDK/Lightning Platform)</fullName>
                </value>
                <value>
                    <fullName>Reporting against custom data</fullName>
                </value>
                <value>
                    <fullName>Security (compliance products)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesforce_org_Foundation__c</fullName>
        <label>Salesforce.org (Foundation)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Higher Education Data Architect (HEDA)</fullName>
                </value>
                <value>
                    <fullName>Non Profit Success Pack</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Customer_Survey_to__c</fullName>
        <label>Send Customer Survey to :</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce Admin</fullName>
                </value>
                <value>
                    <fullName>Executive Sponsor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Cloud__c</fullName>
        <label>Service Cloud</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>B to B</fullName>
                </value>
                <value>
                    <fullName>B to C</fullName>
                </value>
                <value>
                    <fullName>Back office Integration</fullName>
                </value>
                <value>
                    <fullName>Case Management</fullName>
                </value>
                <value>
                    <fullName>CTI (Computer Telephony Integration)</fullName>
                </value>
                <value>
                    <fullName>Entitlements/SLAs</fullName>
                </value>
                <value>
                    <fullName>Implement Flows</fullName>
                </value>
                <value>
                    <fullName>Knowledge Management</fullName>
                </value>
                <value>
                    <fullName>Large Implementation - over 1000 agents</fullName>
                </value>
                <value>
                    <fullName>Lightning Deployment</fullName>
                </value>
                <value>
                    <fullName>Lightning Migration</fullName>
                </value>
                <value>
                    <fullName>Live Agent (Chat)</fullName>
                </value>
                <value>
                    <fullName>LiveMessage</fullName>
                </value>
                <value>
                    <fullName>Service Communities/Portals/Help Center</fullName>
                </value>
                <value>
                    <fullName>Service Console / Agent Desktop Integration</fullName>
                </value>
                <value>
                    <fullName>Social Customer Svs (Radian6 integration)</fullName>
                </value>
                <value>
                    <fullName>SOS and Snap-Ins</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sharing_Restriction__c</fullName>
        <inlineHelpText>This picklist will determine the image that shows up for "Able to Mention Customer Name?"</inlineHelpText>
        <label>Sharing Restrictions</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Educational Use Only - Do Not Mention Customer Name</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Approved for External Use - OK to Mention Customer Name</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Solution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solutions__c</fullName>
        <label>Story</label>
        <length>20000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Backlog</fullName>
                </value>
                <value>
                    <fullName>Available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Story_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Story Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CustomerStories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Story_Type__c</fullName>
        <label>Story Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Win</fullName>
                </value>
                <value>
                    <fullName>Loss</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Language__c</fullName>
        <label>Survey Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Synopsis__c</fullName>
        <label>Synopsis</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Win_Against__c</fullName>
        <label>Win Against</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor 1</fullName>
                </value>
                <value>
                    <fullName>Competitor 2</fullName>
                </value>
                <value>
                    <fullName>Competitor 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>callRef__c</fullName>
        <formula>if( ISPICKVAL( Sales_Reference__c , "Yes") ,  IMAGE("/resource/CSForce_Images/CSForce_Call.png", "Contact CAN be used as a reference"),  
if( ISPICKVAL( Sales_Reference__c , "No"), IMAGE("/resource/CSForce_Images/CSForce_NoCall.png", "Contact CANNOT be used as a reference"), IMAGE("/resource/CSForce_Images/CSForce_unknown.png", "It is UNKNOWN if contact can be used as a reference"))
)</formula>
        <inlineHelpText>This image is set by the "Sales Reference" picklist.</inlineHelpText>
        <label>Use Contact As Reference?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sharingR__c</fullName>
        <formula>if( ISPICKVAL( Sharing_Restriction__c , "Educational Use Only - Do Not Mention Customer Name") ,  IMAGE("/resource/CSForce_Images/CSForce_Edu.png", "Educational Use Only - Do Not Mention Customer Name"), IMAGE("/resource/CSForce_Images/CSForce_ExtUse.png", "Approved for External Use - OK to Mention Customer Name"))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This image is set by the "Share Restrictions" picklist.</inlineHelpText>
        <label>Able to Mention Customer Name?</label>
        <type>Text</type>
    </fields>
    <label>Customer Stories Search</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Stories Search</pluralLabel>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Project__c</columns>
        <columns>Story_Owner__c</columns>
        <columns>Win_Against__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Available</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Synopsis__c</columns>
        <columns>Solutions__c</columns>
        <columns>Win_Against__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </filters>
        <label>Available</label>
    </listViews>
    <listViews>
        <fullName>Visible_in_Portal</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Synopsis__c</columns>
        <columns>Solutions__c</columns>
        <columns>Win_Against__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sharing_Restriction__c</field>
            <operation>equals</operation>
            <value>Approved for External Use - OK to Mention Customer Name</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </filters>
        <label>Visible in Portal</label>
        <language>en_US</language>
    </listViews>
</CustomObject>